--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -62,33 +62,29 @@
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): JS Review Kahoot and Intro to Arrays</h2>
-      <h2>Period 2 (9:00-9:50): Rock Paper Scissors Lab - Part 2</h2>
-      <h2>Period 3 (10:10-11:50): Intro to Loops | Lightbox Demo (Assignment 23)</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time (RPS Lab Pt 2 | Assignment 23)</h2>
+      <h2>Period 1 (8:10-8:50): JS Review Kahoot and Intro to Event Listeners</h2>
+      <h2>Period 2 (9:00-9:50): Assignment 23 Demo continued</h2>
+      <h2>Period 3 (10:10-11:50): Rock Paper Scissors Lab (Part 3) Demo</h2>
+      <h2>Period 4 (12:10pm-1pm): Lab Time (RPS Lab Pt 3 | Assignment 23)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem warning">
-        <span>Rock Paper Scissors Lab - Part 1</span>
-        <span>Yesterday at 2pm</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Assignment 22 (Bouncing Ball)</span>
-        <span>Yesterday at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
         <span>Rock Paper Scissors Lab - Part 2</span>
-        <span>Today at 2pm</span>
+        <span>Yesterday at 2pm</span>
       </h2>
       <h2 class="assnItem highlight">
         <span>Assignment 23 (Lightbox Gallery)</span>
         <span>Today at 2pm</span>
       </h2>
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
+        <span>Rock Paper Scissors Lab - Part 3</span>
+        <span>Today at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
         <span>Revisions for Assignment 14 - 20 &amp; Labs 4&amp;5</span>
-        <span>Due Thursday at midnight</span>
+        <span>Due TONIGHT at midnight</span>
       </h2>
     </div>
 
