--- a/examples/rockpaperscissors/part1/game_v1.html
+++ b/examples/rockpaperscissors/part1/game_v1.html
@@ -23,7 +23,7 @@
 
       yourPickText.innerHTML = yourPick;
       myPickText.innerHTML = myPick;
-      resultText.innerHTML = getResultText(yourPick, myPick);
+      resultText.innerHTML = getResultText(myPick, yourPick);
     </script>
   </body>
 </html>
