--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,33 +58,29 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 10/19 (Day 23)</h1>
+    <h1>GDWD 108 Agenda for 10/24 (Day 25)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): JS Review Kahoot and Intro to Event Listeners</h2>
-      <h2>Period 2 (9:00-9:50): Assignment 23 Demo continued</h2>
-      <h2>Period 3 (10:10-11:50): Rock Paper Scissors Lab (Part 3) Demo</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time (RPS Lab Pt 3 | Assignment 23)</h2>
+      <h2>Period 1 (8:10-8:50): Intro to Assn 24 & Final Project</h2>
+      <h2>Period 2 (9:00-9:50): Lab Time</h2>
+      <h2>Period 3 (10:10-11:50): Lab Time</h2>
+      <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem warning">
-        <span>Rock Paper Scissors Lab - Part 2</span>
-        <span>Yesterday at 2pm</span>
+      <h2 class="assnItem">
+        <span>Assignment 24 - Resume Check-in</span>
+        <span>Wednesday at midnight</span>
       </h2>
-      <h2 class="assnItem highlight">
-        <span>Assignment 23 (Lightbox Gallery)</span>
-        <span>Today at 2pm</span>
+      <h2 class="assnItem">
+        <span>FINAL PROJECT - Personal Portfolio Site</span>
+        <span>Wednesday at midnight</span>
       </h2>
-      <h2 class="assnItem highlight">
-        <span>Rock Paper Scissors Lab - Part 3</span>
-        <span>Today at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Revisions for Assignment 14 - 20 &amp; Labs 4&amp;5</span>
-        <span>Due TONIGHT at midnight</span>
+      <h2 class="assnItem">
+        <span>Revisions for JS Assignments and Labs</span>
+        <span>Wednesday at midnight</span>
       </h2>
     </div>
 
