--- a/examples/107/scratchpad.html
+++ b/examples/107/scratchpad.html
@@ -1,43 +1,7 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <title>CSS Transitions</title>
-    <style>
-      h1 {
-        color: black;
-        font-size: 36px;
-        transition: font-size 0.5s, color 0.5s;
-      }
-      h1:hover {
-        color: green;
-        font-size: 60px;
-      }
-      #box {
-        box-sizing: border-box;
-        height: 200px;
-        width: 200px;
-        background-color: red;
-        transition:
-          background-color 2s,
-          border-radius 2s;
-      }
-      #box:hover {
-        background-color: blue;
-        border-radius: 50%;
-      }
-      #cat {
-        width: 250px;
-        transition: transform 1s, border-radius 1s;
-      }
-      #cat:hover {
-        transform: scale(2) rotate(360deg);
-        border-radius: 36px;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Let's start simple</h1>
-    <div id="box"></div>
-    <img id="cat" src="../../images/cat.png">
-  </body>
-</html>
+// if you want to open a link
+// in a new tab, use the target
+// attribute
+
+<a href="#" target="_blank">
+  Click me to open in a new tab!
+</a>
