--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,11 +58,11 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 10/24 (Day 25)</h1>
+    <h1>GDWD 108 Agenda for 10/25 (Day 26)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Intro to Assn 24 & Final Project</h2>
+      <h2>Period 1 (8:10-8:50): Lab Time</h2>
       <h2>Period 2 (9:00-9:50): Lab Time</h2>
       <h2>Period 3 (10:10-11:50): Lab Time</h2>
       <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
