--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,7 +58,7 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 10/25 (Day 26)</h1>
+    <h1>GDWD 108 Agenda for 10/26 (Day 27)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
@@ -70,17 +70,25 @@
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
         <span>Assignment 24 - Resume Check-in</span>
-        <span>Wednesday at midnight</span>
+        <span>Due TONIGHT at midnight</span>
       </h2>
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
         <span>FINAL PROJECT - Personal Portfolio Site</span>
-        <span>Wednesday at midnight</span>
+        <span>Due TONIGHT at midnight</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Revisions for JS Assignments and Labs</span>
+        <span>Due TONIGHT at midnight</span>
       </h2>
       <h2 class="assnItem">
-        <span>Revisions for JS Assignments and Labs</span>
-        <span>Wednesday at midnight</span>
+        <span>FINAL EXAM</span>
+        <span>TOMORROW</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>FINAL EVAL</span>
+        <span>TOMORROW</span>
       </h2>
     </div>
 
