--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -62,33 +62,33 @@
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Lab Time</h2>
-      <h2>Period 2 (9:00-9:50): Lab Time</h2>
-      <h2>Period 3 (10:10-11:50): Lab Time</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
+      <h2>Period 1 (8:10-8:50): Final Exam Review (Kahoot)</h2>
+      <h2>Period 2 (9:00-9:50): Final Exam Review (Kahoot)</h2>
+      <h2>Period 3 (10:10-11:50): Final Exam</h2>
+      <h2>Period 4 (12:10pm-1pm): Final Eval and Surveys</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>Assignment 24 - Resume Check-in</span>
-        <span>Due TONIGHT at midnight</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>FINAL PROJECT - Personal Portfolio Site</span>
-        <span>Due TONIGHT at midnight</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Revisions for JS Assignments and Labs</span>
-        <span>Due TONIGHT at midnight</span>
-      </h2>
-      <h2 class="assnItem">
         <span>FINAL EXAM</span>
-        <span>TOMORROW</span>
+        <span>TODAY</span>
       </h2>
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
         <span>FINAL EVAL</span>
-        <span>TOMORROW</span>
+        <span>TODAY</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>Assignment 24 - Resume Check-in</span>
+        <span>Due YESTERDAY at midnight</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>FINAL PROJECT - Personal Portfolio Site</span>
+        <span>Due YESTERDAY at midnight</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>Revisions for JS Assignments and Labs</span>
+        <span>Due YESTERDAY at midnight</span>
       </h2>
     </div>
 
