--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,24 +58,31 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for 10/31 (Day 1)</h1>
+    <h1>GDWD 109 Agenda for 11/1 (Day 2)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Intro to 109</h2>
+      <h2>Period 1 (8:10-8:50): Lab Time</h2>
       <h2>Period 2 (9:00-9:50): Lab Time</h2>
-      <h2>Period 3 (10:10-11:50): Planning Assignment (WebDev|UI/UX) Due</h2>
-      <h2>Period 4 (12:10pm-1pm): Final Eval and Surveys</h2>
+      <h2>Period 3 (10:10-11:50): Critiques</h2>
+      <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem highlight">
-        <span>Planning Assignment (Web Dev | UI/UX)</span>
-        <span>Today at 10am</span>
-      </h2>
-
       <h2 class="assnItem warning">
+        <span>Planning Assignment (Web Dev | UI/UX)</span>
+        <span>Yesterday at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Critique! (Jules, Shaneka, Ashley, Leon)</span>
+        <span>Today</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>Critique! (Louie, Soemie, Sydney, Q)</span>
+        <span>Tomorrow</span>
+      </h2>
+      <h2 class="assnItem">
         <span>Projects Turn-in &amp; Retrospective (Web Dev | UI/UX)</span>
         <span>Thursday at 2pm</span>
       </h2>
