--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,7 +58,7 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for 11/1 (Day 2)</h1>
+    <h1>GDWD 109 Agenda for 11/2 (Day 3)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
@@ -70,27 +70,23 @@
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem warning">
-        <span>Planning Assignment (Web Dev | UI/UX)</span>
-        <span>Yesterday at 2pm</span>
-      </h2>
       <h2 class="assnItem highlight">
-        <span>Critique! (Jules, Shaneka, Ashley, Leon)</span>
+        <span>Critique! (Louie, Soemie, Sydney, Q)</span>
         <span>Today</span>
       </h2>
       <h2 class="assnItem">
-        <span>Critique! (Louie, Soemie, Sydney, Q)</span>
-        <span>Tomorrow</span>
+        <span>Projects Turn-in &amp; Retrospective (Web Dev | UI/UX)</span>
+        <span>Tomorrow at 2pm</span>
       </h2>
       <h2 class="assnItem">
-        <span>Projects Turn-in &amp; Retrospective (Web Dev | UI/UX)</span>
-        <span>Thursday at 2pm</span>
+        <span>[NEW] Planning Assignment (Illustrator)</span>
+        <span>Tomorrow at 2pm</span>
       </h2>
     </div>
 
     <h1>Late Policy</h1>
     <div id="agenda">
-      <h2>Assignments Due each day at 2pm</h2>
+      <!-- <h2>Assignments Due each day at 2pm</h2> -->
       <h2>Late Turn-in: 21% off</h2>
       <h2>
         Last Day to Turn-in Assignments:
