--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,29 +58,25 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for 11/2 (Day 3)</h1>
+    <h1>GDWD 109 Agenda for 11/3 (Day 4)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
       <h2>Period 1 (8:10-8:50): Lab Time</h2>
       <h2>Period 2 (9:00-9:50): Lab Time</h2>
-      <h2>Period 3 (10:10-11:50): Critiques</h2>
+      <h2>Period 3 (10:10-11:50): Impromptu Critique(s)</h2>
       <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>Critique! (Louie, Soemie, Sydney, Q)</span>
-        <span>Today</span>
+        <span>Projects Turn-in &amp; Retrospective <br>(Web Dev | UI/UX)</span>
+        <span>Today at 2pm</span>
       </h2>
-      <h2 class="assnItem">
-        <span>Projects Turn-in &amp; Retrospective (Web Dev | UI/UX)</span>
-        <span>Tomorrow at 2pm</span>
-      </h2>
-      <h2 class="assnItem">
-        <span>[NEW] Planning Assignment (Illustrator)</span>
-        <span>Tomorrow at 2pm</span>
+      <h2 class="assnItem highlight">
+        <span>Planning Assignment (Illustrator)</span>
+        <span>Today at 2pm</span>
       </h2>
     </div>
 
