--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -44,7 +44,7 @@
       }
       .assnItem {
         display: flex;
-        max-width: 800px;
+        max-width: 900px;
       }
       .assnItem span:first-child {
         flex: 1;
@@ -58,25 +58,33 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for 11/3 (Day 4)</h1>
+    <h1>GDWD 109 Agenda for 11/7 (Day 5)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Lab Time</h2>
-      <h2>Period 2 (9:00-9:50): Lab Time</h2>
-      <h2>Period 3 (10:10-11:50): Impromptu Critique(s)</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
+      <h2>Period 1 (8:10-8:50): Lab Time (Illustrator)</h2>
+      <h2>Period 2 (9:00-9:50): Lab Time (Illustrator)</h2>
+      <h2>Period 3 (10:10-11:50): Critiques (Leilani, Leonard, Roberto, Akimah)</h2>
+      <h2>Period 4 (12:10pm-1pm): Lab Time (Illustrator)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>Projects Turn-in &amp; Retrospective <br>(Web Dev | UI/UX)</span>
-        <span>Today at 2pm</span>
+        <span>Last Thursday at 2pm</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>Planning Assignment (Illustrator)</span>
+        <span>Last Thursday at 2pm</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Planning Assignment (Illustrator)</span>
-        <span>Today at 2pm</span>
+        <span>Critiques (Leilani, Leonard, Roberto, Akimah)</span>
+        <span>Today at 10:10am</span>
+      </h2>
+      <h2 class="assnItem ">
+        <span>Critiques (Tess, Ava, Suzzanna, Demond)</span>
+        <span>Tomorrow at 10:10am</span>
       </h2>
     </div>
 
