--- a/critique_groundrules.html
+++ b/critique_groundrules.html
@@ -27,6 +27,7 @@
     <ul>
       <li>Be kind, and be helpful</li>
       <li>Be as objective as possible</li>
+      <li>Provide at least piece of feedback per critique</li>
     </ul>
 
   </body>
