--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,7 +58,7 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for 11/9 (Day 7)</h1>
+    <h1>GDWD 109 Agenda for 11/14 (Day 8)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
@@ -70,17 +70,21 @@
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
         <span>Project Turn-in (Illustrator Final Drafts)</span>
-        <span>Tomorrow at 2pm</span>
+        <span>Today at 2pm</span>
       </h2>
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
         <span>Project Turn-in (Illustrator Process Post)</span>
-        <span>Tomorrow at 2pm</span>
+        <span>Today at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Planning Assignment (Photoshop and InDesign)</span>
+        <span>Today at 2pm</span>
       </h2>
       <h2 class="assnItem">
-        <span>[NEW] Planning Assignment (Photoshop and InDesign)</span>
-        <span>Tomorrow at 2pm</span>
+        <span>Critiques! (Photoshop and InDesign) -  Leilani, Leonard, Roberto, Akimah</span>
+        <span>Tomorrow at 10:10am</span>
       </h2>
     </div>
 
