--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,33 +58,37 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for 11/14 (Day 8)</h1>
+    <h1>GDWD 109 Agenda for 11/15 (Day 9)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Lab Time (Illustrator)</h2>
-      <h2>Period 2 (9:00-9:50): Lab Time (Illustrator)</h2>
-      <h2>Period 3 (10:10-11:50): Lab Time (Illustrator)</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time (Illustrator)</h2>
+      <h2>Period 1 (8:10-8:50): Lab Time (Photoshop/InDesign)</h2>
+      <h2>Period 2 (9:00-9:50): Lab Time (Photoshop/InDesign)</h2>
+      <h2>Period 3 (10:10-11:50): Critiques! (Photoshop/InDesign) - Leilani, Leonard, Roberto, Akimah</h2>
+      <h2>Period 4 (12:10pm-1pm): Lab Time (Photoshop/InDesign)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>Project Turn-in (Illustrator Final Drafts)</span>
-        <span>Today at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Project Turn-in (Illustrator Process Post)</span>
-        <span>Today at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Planning Assignment (Photoshop and InDesign)</span>
-        <span>Today at 2pm</span>
+        <span>Critiques! (Photoshop and InDesign) -  Leilani, Leonard, Roberto, Akimah</span>
+        <span>Today at 10:10am</span>
       </h2>
       <h2 class="assnItem">
-        <span>Critiques! (Photoshop and InDesign) -  Leilani, Leonard, Roberto, Akimah</span>
+        <span>Critiques! (Photoshop and InDesign) -  Louie, Leon, Tess, Soemie</span>
         <span>Tomorrow at 10:10am</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>Project Turn-in (Illustrator Final Drafts)</span>
+        <span>Yesterday at 2pm</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>Project Turn-in (Illustrator Process Post)</span>
+        <span>Yesterday at 2pm</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>Planning Assignment (Photoshop and InDesign)</span>
+        <span>Yesterday at 2pm</span>
       </h2>
     </div>
 
