--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,24 +58,36 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for 11/16 (Day 10)</h1>
+    <h1>GDWD 109 Agenda for 11/17 (Day 11)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
       <h2>Period 1 (8:10-8:50): Lab Time (Photoshop/InDesign)</h2>
       <h2>Period 2 (9:00-9:50): Lab Time (Photoshop/InDesign)</h2>
-      <h2>Period 3 (10:10-11:50): Critiques! (Photoshop/InDesign) - Louie, Leon, Tess, Soemie</h2>
+      <h2>Period 3 (10:10-11:50): Lab Time (Photoshop/InDesign)</h2>
       <h2>Period 4 (12:10pm-1pm): Lab Time (Photoshop/InDesign)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>Critiques! (Photoshop and InDesign) -  Louie, Leon, Tess, Soemie</span>
-        <span>Today at 10:10am</span>
+        <span>Planning Assignment (After Effects)</span>
+        <span>Today at 2pm</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>Photoshop/InDesign Project Turn-in (Final Drafts)</span>
+        <span>Monday at 2pm</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>Photoshop/InDesign Project Turn-in (Process Post)</span>
+        <span>Monday at 2pm</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>After Effects Project Turn-in (Final Drafts)</span>
+        <span>Wednesday at 2pm</span>
       </h2>
       <h2 class="assnItem warning">
-        <span>Critiques Discussion Posts -  Leilani, Leonard, Roberto, Akimah</span>
+        <span>Critiques Discussion Posts -  Louie, Leon, Tess, Soemie</span>
         <span>Yesterday at 2pm</span>
       </h2>
     </div>
@@ -85,53 +97,41 @@
       <!-- <h2>Assignments Due each day at 2pm</h2> -->
       <h2>Late Turn-in: 21% off</h2>
       <h2>
-        Last Day to Turn-in Assignments/Revisions:
-        the Monday following the week
-        of the due date
+        Last Day to Turn-in ANYTHING:
+        Wednesday, November 23rd
       </h2>
       <h3>(Anything turned in past this won't be graded)</h3>
     </div>
-    <!--
+
     <h1>Coming Soon</h1>
     <div id="agenda">
-      <div class="agendaItem done">
-        <span>08/30 (Day 09)</span>
-        <span>Photoshop/InDesign Critiques Part 1</span>
+      <div class="agendaItem">
+        <span>11/17 (Day 11)</span>
+        <span>Lab Day (Photoshop/InDesign) | AfterEffects Planning</span>
       </div>
-      <div class="agendaItem done">
-        <span>08/31 (Day 10)</span>
-        <span>Photoshop/InDesign Critiques Part 2</span>
+      <br><br>
+      <div class="agendaItem">
+        <span>11/21 (Day 12)</span>
+        <span>Lab Day (Photoshop/InDesign Wrap-up) | AfterEffects Critiques Part 1 | Final Exam Review #1</span>
       </div>
-      <div class="agendaItem done">
-        <span>09/01 (Day 11)</span>
-        <span>Lab Day (Photoshop/InDesign) | Final Exam Review #1</span>
+      <div class="agendaItem">
+        <span>11/22 (Day 13)</span>
+        <span>Lab Day (After Effects) | AfterEffects Critiques Part 2 | Final Exam Review #2</span>
       </div>
-      <div class="agendaItem done">
-        <span>09/05 (Labor Day)</span>
+      <div class="agendaItem">
+        <span>11/23 (Day 14)</span>
+        <span>Lab Day (After Effects Wrap-up) | Final Exam Review #3</span>
+      </div>
+      <div class="agendaItem">
+        <span>11/24 (Thanksgiving)</span>
         <span>NO CLASS</span>
       </div>
+      <br><br>
       <div class="agendaItem">
-        <span>09/06 (Day 12)</span>
-        <span>Photoshop Wrap Up | AfterEffects/UI/UX Planning | Final Exam Review #2</span>
+        <span>11/28 (Day 15)</span>
+        <span>Final Exam / Final Eval</span>
       </div>
-      <br>
-      <div class="agendaItem">
-        <span>09/07 (Day 13)</span>
-        <span>AfterEffects/UI/UX Critiques Part 1</span>
-      </div>
-      <div class="agendaItem">
-        <span>09/08 (Day 14)</span>
-        <span>AfterEffects/UI/UX Critiques Part 1</span>
-      </div>
-      <div class="agendaItem">
-        <span>09/12 (Day 15)</span>
-        <span>Lab Day (AfterEffects/UI/UX) | Final Exam Review #3</span>
-      </div>
-      <div class="agendaItem">
-        <span>09/13 (Day 16)</span>
-        <span>AfterEffects/UI/UX Wrap Up | Final Exam</span>
-      </div>
-    </div> -->
+    </div>
 
   </body>
 </html>
