--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -75,12 +75,20 @@
         <span>Today at 2pm</span>
       </h2>
       <h2 class="assnItem">
+        <span>After Effects Critiques (Sydney, Ashley, Jules, Demond)</span>
+        <span>Monday at 10:10am</span>
+      </h2>
+      <h2 class="assnItem">
         <span>Photoshop/InDesign Project Turn-in (Final Drafts)</span>
         <span>Monday at 2pm</span>
       </h2>
       <h2 class="assnItem">
         <span>Photoshop/InDesign Project Turn-in (Process Post)</span>
         <span>Monday at 2pm</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>After Effects Critiques (Shaneka, Suzzanna, Ava, Q)</span>
+        <span>Tuesday at 10:10am</span>
       </h2>
       <h2 class="assnItem">
         <span>After Effects Project Turn-in (Final Drafts)</span>
