--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,33 +58,29 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for 11/17 (Day 11)</h1>
+    <h1>GDWD 109 Agenda for 11/21 (Day 12)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
       <h2>Period 1 (8:10-8:50): Lab Time (Photoshop/InDesign)</h2>
       <h2>Period 2 (9:00-9:50): Lab Time (Photoshop/InDesign)</h2>
-      <h2>Period 3 (10:10-11:50): Lab Time (Photoshop/InDesign)</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time (Photoshop/InDesign)</h2>
+      <h2>Period 3 (10:10-11:50): Critique! (Sydney, Ashley, Jules, Demond)</h2>
+      <h2>Period 4 (12:10pm-1pm): Final Exam Review #1</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>Planning Assignment (After Effects)</span>
+        <span>After Effects Critiques (Sydney, Ashley, Jules, Demond)</span>
+        <span>Today at 10:10am</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Photoshop/InDesign Project Turn-in (Final Drafts)</span>
         <span>Today at 2pm</span>
       </h2>
-      <h2 class="assnItem">
-        <span>After Effects Critiques (Sydney, Ashley, Jules, Demond)</span>
-        <span>Monday at 10:10am</span>
-      </h2>
-      <h2 class="assnItem">
-        <span>Photoshop/InDesign Project Turn-in (Final Drafts)</span>
-        <span>Monday at 2pm</span>
-      </h2>
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
         <span>Photoshop/InDesign Project Turn-in (Process Post)</span>
-        <span>Monday at 2pm</span>
+        <span>Today at 2pm</span>
       </h2>
       <h2 class="assnItem">
         <span>After Effects Critiques (Shaneka, Suzzanna, Ava, Q)</span>
@@ -95,8 +91,8 @@
         <span>Wednesday at 2pm</span>
       </h2>
       <h2 class="assnItem warning">
-        <span>Critiques Discussion Posts -  Louie, Leon, Tess, Soemie</span>
-        <span>Yesterday at 2pm</span>
+        <span>Planning Assignment (After Effects)</span>
+        <span>Last Thursday at 2pm</span>
       </h2>
     </div>
 
@@ -113,7 +109,7 @@
 
     <h1>Coming Soon</h1>
     <div id="agenda">
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>11/17 (Day 11)</span>
         <span>Lab Day (Photoshop/InDesign) | AfterEffects Planning</span>
       </div>
