--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,41 +58,38 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for 11/21 (Day 12)</h1>
+    <h1>GDWD 109 Agenda for 11/22 (Day 13)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
       <h2>Period 1 (8:10-8:50): Lab Time (Photoshop/InDesign)</h2>
       <h2>Period 2 (9:00-9:50): Lab Time (Photoshop/InDesign)</h2>
-      <h2>Period 3 (10:10-11:50): Critique! (Sydney, Ashley, Jules, Demond)</h2>
-      <h2>Period 4 (12:10pm-1pm): Final Exam Review #1</h2>
+      <h2>Period 3 (10:10-11:50): Critique! (Shaneka, Suzzanna, Ava, Q)</h2>
+      <h2>Period 4 (12:10pm-1pm): Final Exam Review #2</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
+
       <h2 class="assnItem highlight">
-        <span>After Effects Critiques (Sydney, Ashley, Jules, Demond)</span>
-        <span>Today at 10:10am</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Photoshop/InDesign Project Turn-in (Final Drafts)</span>
-        <span>Today at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Photoshop/InDesign Project Turn-in (Process Post)</span>
-        <span>Today at 2pm</span>
-      </h2>
-      <h2 class="assnItem">
         <span>After Effects Critiques (Shaneka, Suzzanna, Ava, Q)</span>
-        <span>Tuesday at 10:10am</span>
+        <span>Today at 10:10am</span>
       </h2>
       <h2 class="assnItem">
         <span>After Effects Project Turn-in (Final Drafts)</span>
         <span>Wednesday at 2pm</span>
       </h2>
       <h2 class="assnItem warning">
-        <span>Planning Assignment (After Effects)</span>
-        <span>Last Thursday at 2pm</span>
+        <span>After Effects Critiques (Sydney, Ashley, Demond)</span>
+        <span>Yesterday at 2pm</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>Photoshop/InDesign Project Turn-in (Final Drafts)</span>
+        <span>Yesterday at 2pm</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>Photoshop/InDesign Project Turn-in (Process Post)</span>
+        <span>Yesterday at 2pm</span>
       </h2>
     </div>
 
@@ -114,7 +111,7 @@
         <span>Lab Day (Photoshop/InDesign) | AfterEffects Planning</span>
       </div>
       <br><br>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>11/21 (Day 12)</span>
         <span>Lab Day (Photoshop/InDesign Wrap-up) | AfterEffects Critiques Part 1 | Final Exam Review #1</span>
       </div>
@@ -134,6 +131,11 @@
       <div class="agendaItem">
         <span>11/28 (Day 15)</span>
         <span>Final Exam / Final Eval</span>
+      </div>
+      <br><br>
+      <div class="agendaItem">
+        <span>??/??</span>
+        <span>Graduation (watch for email from FIRST)</span>
       </div>
     </div>
 
