--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -62,8 +62,8 @@
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Lab Time (Photoshop/InDesign)</h2>
-      <h2>Period 2 (9:00-9:50): Lab Time (Photoshop/InDesign)</h2>
+      <h2>Period 1 (8:10-8:50): Lab Time (AfterEffects)</h2>
+      <h2>Period 2 (9:00-9:50): Lab Time (AfterEffects)</h2>
       <h2>Period 3 (10:10-11:50): Critique! (Shaneka, Suzzanna, Ava, Q)</h2>
       <h2>Period 4 (12:10pm-1pm): Final Exam Review #2</h2>
     </div>
