--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -106,7 +106,7 @@
         <span>11/22 (Day 13)</span>
         <span>Lab Day (After Effects) | AfterEffects Critiques Part 2 | Final Exam Review #2</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>11/23 (Day 14)</span>
         <span>Lab Day (After Effects Wrap-up) | Final Exam Review #3</span>
       </div>
