--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -62,38 +62,50 @@
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Lab Time (AfterEffects)</h2>
-      <h2>Period 2 (9:00-9:50): Lab Time (AfterEffects)</h2>
-      <h2>Period 3 (10:10-11:50): Final Exam Review #3</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time (AfterEffects)</h2>
+      <h2>Period 1 (8:10-8:50): Final Exam</h2>
+      <h2>Period 2 (9:00-9:50): Final Exam</h2>
+      <h2>Period 3 (10:10-11:50): Final Exam | Final Eval</h2>
+      <h2>Period 4 (12:10pm-1pm): Final Eval | Surveys</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>After Effects Project Turn-in (Final Drafts)</span>
+        <span>FINAL EXAM</span>
         <span>Today at 2pm</span>
       </h2>
-      <h2 class="assnItem warning">
-        <span>After Effects Critiques (Shaneka, Suzzanna, Ava, Q)</span>
-        <span>Yesterday at 2pm</span>
+      <h2 class="assnItem highlight">
+        <span>FINAL EVAL</span>
+        <span>Today at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>109 End Course Survey</span>
+        <span>Today at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Graduation Survey</span>
+        <span>Today at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Graduation Information Update Survey</span>
+        <span>Today at 2pm</span>
       </h2>
     </div>
 
-    <h1>Late Policy</h1>
+    <!-- <h1>Late Policy</h1>
     <div id="agenda">
-      <!-- <h2>Assignments Due each day at 2pm</h2> -->
+      <h2>Assignments Due each day at 2pm</h2>
       <h2>Late Turn-in: 21% off</h2>
       <h2>
         Last Day to Turn-in ANYTHING:
         Wednesday, November 23rd
       </h2>
       <h3>(Anything turned in past this won't be graded)</h3>
-    </div>
+    </div> -->
 
     <h1>Coming Soon</h1>
     <div id="agenda">
-      <div class="agendaItem done">
+      <!-- <div class="agendaItem done">
         <span>11/17 (Day 11)</span>
         <span>Lab Day (Photoshop/InDesign) | AfterEffects Planning</span>
       </div>
@@ -110,11 +122,11 @@
         <span>11/23 (Day 14)</span>
         <span>Lab Day (After Effects Wrap-up) | Final Exam Review #3</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>11/24 (Thanksgiving)</span>
         <span>NO CLASS</span>
       </div>
-      <br><br>
+      <br><br> -->
       <div class="agendaItem">
         <span>11/28 (Day 15)</span>
         <span>Final Exam / Final Eval</span>
