--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -87,7 +87,7 @@
         <span>Today at 2pm</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Graduation Information Update Survey</span>
+        <span>Graduation Information Update Survey [MOST IMPORTANT]</span>
         <span>Today at 2pm</span>
       </h2>
     </div>
