--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>AGENDA</title>
+    <title>AGENDA &amp; SYLLABUS</title>
     <meta name="description" content="This is an amazing site; come visit!">
     <style>
       body {
@@ -58,70 +58,102 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for Day 12 (9/6)</h1>
+    <h1>GDWD 108 Agenda for Day 1 (12/05)</h1>
     <div id="agenda">
-      <h2>Announcements (6:05)</h2>
-      <h3>(if you're not here by 6:10, you're tardy!)</h3>
-      <h2>Period 1 (6:10-6:50): Lab Time</h2>
-      <h2>Period 2 (7:00-7:50): Lab Time</h2>
-      <h2>Period 3 (8:10-9:50): Final Exam Review #2</h2>
-      <h2>Period 4 (10:10-11): Lab Time</h2>
+      <h2>Announcements (5:35)</h2>
+      <h3>(if you're not here by 5:40, you're tardy!)</h3>
+      <h2>Period 1 (5:30-6:20): Introductions / Intro to 108 / Planning Assignments</h2>
+      <h2>Period 2 (6:30-7:20): Lab Time</h2>
+      <h2>Period 3 (8:10-9:50): Critiques!</h2>
+      <h2>Period 4 (10:00-10:50): Critiques! and Lab Time</h2>
+      <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>Project Turn-in (Photoshop/InDesign)</span>
-        <span>Due tonight</span>
+        <span>Planning Assignment (Photoshop/InDesign)</span>
+        <span>Due by 7:20pm</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Process Blog Turn-in (Photoshop/InDesign)</span>
-        <span>Due tonight</span>
+        <span>Planning Assignment (Weekly Plan I)</span>
+        <span>Due by 11:15pm</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Planning Assignment (AfterEffects/UI/UX)</span>
-        <span>Due tonight</span>
+        <span>Critique Feedback Assignments</span>
+        <span>Due by 11:15pm</span>
       </h2>
     </div>
 
     <h1>Coming Soon</h1>
     <div id="agenda">
-      <div class="agendaItem done">
-        <span>08/30 (Day 09)</span>
-        <span>Photoshop/InDesign Critiques Part 1</span>
-      </div>
-      <div class="agendaItem done">
-        <span>08/31 (Day 10)</span>
-        <span>Photoshop/InDesign Critiques Part 2</span>
-      </div>
-      <div class="agendaItem done">
-        <span>09/01 (Day 11)</span>
-        <span>Lab Day (Photoshop/InDesign) | Final Exam Review #1</span>
-      </div>
-      <div class="agendaItem done">
-        <span>09/05 (Labor Day)</span>
-        <span>NO CLASS</span>
+      <div class="agendaItem">
+        <span>12/05 (Day 01)</span>
+        <span>Photoshop/InDesign - Planning Assignments and Critiques Part 1</span>
       </div>
       <div class="agendaItem">
-        <span>09/06 (Day 12)</span>
-        <span>Photoshop Wrap Up | AfterEffects/UI/UX Planning | Final Exam Review #2</span>
-      </div>
-      <br>
-      <div class="agendaItem">
-        <span>09/07 (Day 13)</span>
-        <span>AfterEffects/UI/UX Critiques Part 1</span>
+        <span>12/06 (Day 02)</span>
+        <span>Photoshop/InDesign - Critiques Part 2</span>
       </div>
       <div class="agendaItem">
-        <span>09/08 (Day 14)</span>
-        <span>AfterEffects/UI/UX Critiques Part 1</span>
+        <span>12/07 (Day 03)</span>
+        <span>Photoshop/InDesign - Lab Day</span>
       </div>
       <div class="agendaItem">
-        <span>09/12 (Day 15)</span>
-        <span>Lab Day (AfterEffects/UI/UX) | Final Exam Review #3</span>
+        <span>12/08 (Day 04)</span>
+        <span>Photoshop/InDesign - Lab Day</span>
       </div>
       <div class="agendaItem">
-        <span>09/13 (Day 16)</span>
-        <span>AfterEffects/UI/UX Wrap Up | Final Exam</span>
+        <span>12/09 (Day 05)</span>
+        <span>Photoshop/InDesign - Presentations and Project Turn-in Assignments</span>
+      </div>
+      <br><br>
+      <div class="agendaItem">
+        <span>12/12 (Day 06)</span>
+        <span>Illustrator/Motion Graphics - Planning Assignments and Critiques Part 1</span>
+      </div>
+      <div class="agendaItem">
+        <span>12/13 (Day 07)</span>
+        <span>Illustrator/Motion Graphics - Critiques Part 2</span>
+      </div>
+      <div class="agendaItem">
+        <span>12/14 (Day 08)</span>
+        <span>Illustrator/Motion Graphics - Lab Day</span>
+      </div>
+      <div class="agendaItem">
+        <span>12/15 (Day 09)</span>
+        <span>Illustrator/Motion Graphics - Lab Day</span>
+      </div>
+      <div class="agendaItem">
+        <span>12/16 (Day 10)</span>
+        <span>Illustrator/Motion Graphics - Presentations and Project Turn-in Assignments</span>
+      </div>
+      <br><br>
+      <div class="agendaItem">
+        <span>12/19 - 01/02</span>
+        <span>Winter Break!</span>
+      </div>
+      <br><br>
+      <div class="agendaItem">
+        <span>01/03 (Day 11)</span>
+        <span>Web Development/Resume - Planning Assignments and Critiques Part 1</span>
+      </div>
+      <div class="agendaItem">
+        <span>01/04 (Day 12)</span>
+        <span>Web Development/Resume - Critiques Part 2</span>
+      </div>
+      <div class="agendaItem">
+        <span>01/05 (Day 13)</span>
+        <span>Web Development/Resume - Lab Day</span>
+      </div>
+      <div class="agendaItem">
+        <span>01/06 (Day 14)</span>
+        <span>Web Development/Resume - Lab Day and Project Turn-in Assignments</span>
+      </div>
+      <br><br>
+      <div class="agendaItem">
+        <span>01/09 (Day 15)</span>
+        <span>Final Portfolio Site - Presentations | Exit Exam</span>
       </div>
     </div>
 
