--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -85,7 +85,7 @@
       </h2>
     </div>
 
-    <h1>Coming Soon</h1>
+    <h1>Syllabus</h1>
     <div id="agenda">
       <div class="agendaItem">
         <span>12/05 (Day 01)</span>
