--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -80,7 +80,7 @@
         <span>Due by 11:15pm</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Critique Feedback Assignments</span>
+        <span>Critique Feedback Assignments - for Jessica, Tyler, Evan M, August, Jordan</span>
         <span>Due by 11:15pm</span>
       </h2>
     </div>
