--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -90,6 +90,16 @@
       </h2>
     </div>
 
+    <h1>Late Policy</h1>
+    <div id="agenda">
+      <h2>Late Turn-in: 21% off</h2>
+      <h2>
+        Last Day to Turn In Revisions/Late Assignments:
+        <br>One (1) Class Day after the Due Date
+      </h2>
+      <h3>(Anything turned in past this won't be graded)</h3>
+    </div>
+
     <h1>Syllabus</h1>
     <div id="agenda">
       <div class="agendaItem done">
