--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -73,7 +73,7 @@
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>Critique Feedback Assignments - for Desiree, Crystiana, Devon, Calen, Evan H</span>
+        <span>Critique Feedback Assignments - for Crystiana, Devon, Calen, Evan H</span>
         <span>Due by 11:15pm</span>
       </h2>
       <h2 class="assnItem warning">
