--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,34 +58,34 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for Day 2 (12/06)</h1>
+    <h1>GDWD 108 Agenda for Day 3 (12/07)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
       <h2>Period 1 (5:30-6:20): Lab Time</h2>
       <h2>Period 2 (6:30-7:20): Lab Time</h2>
-      <h2>Period 3 (8:10-9:50): Critiques!</h2>
-      <h2>Period 4 (10:00-10:50): Critiques? and Lab Time</h2>
+      <h2>Period 3 (8:10-9:50): Lab Time</h2>
+      <h2>Period 4 (10:00-10:50): Lab Time</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem">
+        <span>Presentations - Photoshop/InDesign Final Drafts</span>
+        <span>Starting beginning of class on Friday</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>Project Turn-in - Photoshop/InDesign Final Drafts</span>
+        <span>Due Friday at 11:15pm</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>Project Turn-in - Photoshop/InDesign Process Post</span>
+        <span>Due Friday at 11:15pm</span>
+      </h2>
+      <h2 class="assnItem warning">
         <span>Critique Feedback Assignments - for Crystiana, Devon, Calen, Evan H</span>
-        <span>Due by 11:15pm</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Planning Assignment (Photoshop/InDesign)</span>
-        <span>Due yesterday</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Planning Assignment (Weekly Plan I)</span>
-        <span>Due yesterday</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Critique Feedback Assignments - for Jessica, Tyler, Evan M, August, Jordan</span>
         <span>Due yesterday</span>
       </h2>
     </div>
@@ -106,7 +106,7 @@
         <span>12/05 (Day 01)</span>
         <span>Photoshop/InDesign - Planning Assignments and Critiques Part 1</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>12/06 (Day 02)</span>
         <span>Photoshop/InDesign - Critiques Part 2</span>
       </div>
