--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,7 +58,7 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for Day 3 (12/07)</h1>
+    <h1>GDWD 108 Agenda for Day 4 (12/08)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
@@ -73,20 +73,16 @@
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem">
-        <span>Presentations - Photoshop/InDesign Final Drafts</span>
-        <span>Starting beginning of class on Friday</span>
+        <span>Presentations - Photoshop/InDesign</span>
+        <span>Starting beginning of class TOMORROW</span>
       </h2>
       <h2 class="assnItem">
         <span>Project Turn-in - Photoshop/InDesign Final Drafts</span>
-        <span>Due Friday at 11:15pm</span>
+        <span>Due TOMORROW at 11:15pm</span>
       </h2>
       <h2 class="assnItem">
         <span>Project Turn-in - Photoshop/InDesign Process Post</span>
-        <span>Due Friday at 11:15pm</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Critique Feedback Assignments - for Crystiana, Devon, Calen, Evan H</span>
-        <span>Due yesterday</span>
+        <span>Due TOMORROW at 11:15pm</span>
       </h2>
     </div>
 
@@ -110,7 +106,7 @@
         <span>12/06 (Day 02)</span>
         <span>Photoshop/InDesign - Critiques Part 2</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>12/07 (Day 03)</span>
         <span>Photoshop/InDesign - Lab Day</span>
       </div>
