--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,31 +58,31 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for Day 4 (12/08)</h1>
+    <h1>GDWD 108 Agenda for Day 5 (12/09)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Lab Time</h2>
-      <h2>Period 2 (6:30-7:20): Lab Time</h2>
-      <h2>Period 3 (8:10-9:50): Lab Time</h2>
+      <h2>Period 1 (5:30-6:20): Presentations (Photoshop/InDesign)</h2>
+      <h2>Period 2 (6:30-7:20): Presentations (Photoshop/InDesign)</h2>
+      <h2>Period 3 (8:10-9:50): Presentations? and Lab Time</h2>
       <h2>Period 4 (10:00-10:50): Lab Time</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
         <span>Presentations - Photoshop/InDesign</span>
-        <span>Starting beginning of class TOMORROW</span>
+        <span>Beginning of class TODAY</span>
       </h2>
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
         <span>Project Turn-in - Photoshop/InDesign Final Drafts</span>
-        <span>Due TOMORROW at 11:15pm</span>
+        <span>Due TODAY at 11:15pm</span>
       </h2>
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
         <span>Project Turn-in - Photoshop/InDesign Process Post</span>
-        <span>Due TOMORROW at 11:15pm</span>
+        <span>Due TODAY at 11:15pm</span>
       </h2>
     </div>
 
@@ -110,7 +110,7 @@
         <span>12/07 (Day 03)</span>
         <span>Photoshop/InDesign - Lab Day</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>12/08 (Day 04)</span>
         <span>Photoshop/InDesign - Lab Day</span>
       </div>
