--- a/examples/105_Lightbox_part2_complete/index.html
+++ b/examples/105_Lightbox_part2_complete/index.html
@@ -58,7 +58,7 @@
 
       // Get references to all elements with the 'closer' class
       let closers = document.getElementsByClassName('closer');
-      // Loop through all galleryImages and attach a click function
+      // Loop through all closer elements and attach a click function
       // that makes the lightbox disappear, and clears the lightbox img src
       for (let i = 0; i < closers.length; i++) {
         let closer = closers[i];
