--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -135,7 +135,7 @@
         <span>12/15 (Day 09)</span>
         <span>Illustrator/Motion Graphics - Lab Day</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>12/16 (Day 10)</span>
         <span>Illustrator/Motion Graphics - Presentations and Project Turn-in Assignments</span>
       </div>
