--- a/scratchpad/functiongame/index.html
+++ b/scratchpad/functiongame/index.html
@@ -10,7 +10,10 @@
         position: relative;
       }
       .gridBlock {
-        border: 2px solid rgba(0, 0, 0, 0.05);
+        background-position: top left;
+        background-repeat: no-repeat;
+        background-size: cover;
+        /* border: 2px solid rgba(239, 228, 176, 0.5); */
         position: absolute;
         z-index: 1;
       }
